<resources>
    <string name="app_name">沐灵茜学院</string>

    <string name="title_home">类型一</string>
    <string name="title_dashboard">类型二</string>
    <string name="title_notifications">类型三</string>
    <string name="title_work">自定义视图</string>
    <string name="title_my">我的</string>


    <string name="inputphone">请输入帐号</string>
    <string name="hint_password">请输入帐号</string>

    <string name="hint_account">请输入帐号</string>

    <string name="login">登录</string>

    <string name="register_new_user">注册新用户</string>

    <string name="forgetpwd">忘记密码？</string>


    <string name="download">下载</string>

    <string name="pickimg">选择图片</string>
    <string name="mlq_location" translatable="false">  上课地址：福建省厦门市思明区后埭溪路22号\n
  乘车路线：旅游2路、113路、116路、127路、16路、17路、19A路、19B路、1路、21路、26路、3路、42路、659路、840路、857路、940路、950路、96路、994路、858路、快1路、快3路、快2路、43路、48路、122路、132路、33路、37路、44路、46路、6路、7路、80路、854路、943路、9路、859路、4路、139路、952路等。
校区简介 ：沐灵茜国际美妆学院是由美业多位行业*联合创立的美业培训机构，也是由多家创办多年的机构合并组成。师资力量雄厚，旗下签约数十名明星讲师。开设专业包括化妆造型、美甲美睫、半永久纹绣、皮肤管理等较为热门的专业课程；致力于打造美业全能美业匠人，帮扶并实现大众的美业创业梦想。</string>
</resources>
