<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.appforysy.activity.activity_main.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.appforysy.activity.activity_main.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.appforysy.activity.activity_main.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />


    <fragment
        android:id="@+id/navigation_work"
        android:name="com.workysy.activity.activity_main.notifications.WorkFragment"
        android:label="@string/title_work"
        tools:layout="@layout/fragment_work" />

    <fragment
        android:id="@+id/navigation_my"
        android:name="com.workysy.activity.activity_main.notifications.MyFragment"
        android:label="@string/title_my"
        tools:layout="@layout/fragment_my" />

</navigation>
