<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_fff"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="50dp"
            android:background="@android:color/white"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <EditText
                android:id="@+id/account"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@android:color/white"
                android:drawableLeft="@drawable/iconleftacc"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/inputphone"
                android:paddingRight="10dp"
                android:textColor="#2E3133"
                android:textCursorDrawable="@color/btn_enable_true"
                android:textSize="14dp" />

            <ImageView
                android:id="@+id/img_result_acc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:src="@mipmap/icon_nav_reset"
                android:visibility="gone" />

        </RelativeLayout>

        <View
            android:id="@+id/line_below_acc"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/bg_line_focu_false" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@android:color/white">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:drawableLeft="@drawable/iconleftpwd"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:paddingRight="10dp"
                android:textColor="#2E3133"
                android:textCursorDrawable="@color/btn_enable_true"
                android:textSize="14dp" />

            <ImageView
                android:id="@+id/see_password"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center_vertical"
                android:padding="10dp"
                android:src="@mipmap/eye"
                android:visibility="gone" />


            <ImageView
                android:id="@+id/img_result_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:src="@mipmap/icon_nav_reset"
                android:visibility="gone" />

        </RelativeLayout>

        <View
            android:id="@+id/line_below_pwd"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/bg_line_focu_false" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/froget_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/forgetpwd"
                android:textColor="#3298FE"
                android:textSize="14dp" />


            <CheckBox
                android:id="@+id/save_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:button="@drawable/login_remember_next"
                android:paddingLeft="10dp"
                android:checked="true"
                android:text="下次自动登录"
                android:textColor="@android:color/darker_gray"
                android:textSize="14dp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/fill_shape_login_click_4"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="14dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp">

            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:paddingTop="14dp"
                android:paddingBottom="10dp"
                android:text="@string/register_new_user"
                android:textColor="#3298FE"
                android:textSize="14dp" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:visibility="invisible"
            android:layout_marginTop="50dp">

            <TextView
                android:id="@+id/login_anther_center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="第三方帐号登录"
                android:textColor="#C2C8CC"
                android:textSize="12dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/login_anther_center"
                android:background="@color/bg_line_focu_false" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/login_anther_center"
                android:background="@color/bg_line_focu_false" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:visibility="invisible">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/share_weixin" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="64dp"
                android:layout_marginRight="64dp"
                android:src="@mipmap/share_zhifubao" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/share_qq" />
        </LinearLayout>

        <TextView
            android:id="@+id/copyright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="登录即代表阅读并同意服务条款"
            android:textColor="#C2C8CC"
            android:textSize="10dp" />

        <!--android:text="Copyright©2018 优速云 版权所有"-->
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/buttonLayout"
        android:background="@mipmap/bg_login_title">


        <!--TOCHANGE-->
        <ImageView
            android:layout_width="162dp"
            android:layout_height="88dp"
            android:background="@mipmap/img_login_logo"
            android:layout_centerInParent="true"/>

        <!--        -->

        <ImageView
            android:id="@+id/imageviewgif"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_alignParentBottom="true"
            android:scaleType="fitXY" />
    </RelativeLayout>

</RelativeLayout>
